--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "private": true,
   "engines": {
-    "node": ">=20.0.0 <=22.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "schema": "cross-env-shell \"shx mkdir -p build/$npm_package_version && npx ts-schema src/schema.ts build/$npm_package_version\"",
@@ -14,8 +14,8 @@
     "pub": "phy descriptor publish"
   },
   "devDependencies": {
-    "@phygrid/cli": "^4.2.468",
-    "@phygrid/ts-schema": "^4.2.468",
+    "@phygrid/cli": "^4.4.18",
+    "@phygrid/ts-schema": "^4.4.18",
     "@types/node": "^22.15.17",
     "cross-env": "^7.0.3",
     "shx": "^0.4.0",
